--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,17 @@ body{
     align-items: center;
     font-family: "Outfit";
 }
-
+#header {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
 .attribution { 
     font-size: 12px; 
     text-align: center; 
